@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-13T08:16:36Z",
+  "timestamp" : "2023-08-13T16:17:47Z",
   "count_outdated" : 759,
   "uniques_outdated" : 434,
-  "count" : 784,
+  "count" : 785,
   "uniques" : 454,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-08-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
