@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 7,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2023-08-13T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
